--- a/.env
+++ b/.env
@@ -50,3 +50,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MAILCHIMP_KEY=1f31bb9ead3d1d6c19a162f1315d1302-us20
